--- a/src/components/PasswordContainer/PasswordContainer.module.scss
+++ b/src/components/PasswordContainer/PasswordContainer.module.scss
@@ -1,5 +1,7 @@
 .container {
   display: flex;
+  flex-direction: column;
+  gap: 10px;
   max-width: 700px;
   height: min-content;
   padding: 20px;
@@ -14,25 +16,51 @@
     rgba(0, 0, 0, 0.7) 0px 32px 64px;
 }
 
+.filter__button {
+  display: flex;
+  align-self: flex-end;
+}
+
+.filter_container {
+  display: flex;
+  gap: 10px;
+}
+
+.filter_container label {
+  color: white;
+}
+
+.table_container {
+  align-items: flex-start;
+  width: 100%;
+  margin-top: 20px;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
-  border-spacing: 0;
 }
 
 caption {
   color: white;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
 
 th,
 td {
   border: 1px solid #ddd;
-  padding: 8px;
-  text-align: left;
+  text-align: center;
   color: white;
+  padding: 10px;
 }
 
 th {
   background-color: #707385;
   font-weight: bold;
+}
+
+.pagination {
+  display: flex;
+  justify-content: space-between;
 }
