--- a/src/components/PasswordContainer/PasswordContainer.module.scss
+++ b/src/components/PasswordContainer/PasswordContainer.module.scss
@@ -39,6 +39,7 @@
 table {
   width: 100%;
   border-collapse: collapse;
+  table-layout: auto;
 }
 
 caption {
@@ -50,9 +51,11 @@ caption {
 th,
 td {
   border: 1px solid #ddd;
-  text-align: center;
+  text-align: left;
   color: white;
   padding: 10px;
+  word-wrap: break-word;
+  max-width: 250px;
 }
 
 th {
@@ -63,4 +66,8 @@ th {
 .pagination {
   display: flex;
   justify-content: space-between;
+}
+
+td:nth-child(3) {
+  text-align: center;
 }
